...
//  Created by Juan Diego Ocampo on 22/03/22.
//

import SwiftUI

struct AwardsView: View {
    static let tag: String? = "Awards"
    private var columns: [GridItem] = [GridItem(.adaptive(minimum: 100, maximum: 100))]

    @EnvironmentObject var dataController: DataController
    
    @State private var selectedAward = Award.example
    @State private var showingAwardDetails = false
...
extension AwardsView {
    private func color(for award: Award) -> Color {
        dataController.hasEarnedAward(award) ? Color(award.color) : Color.secondary.opacity(0.5)
    }
    
    private func label(for award: Award) -> Text {
        Text(dataController.hasEarnedAward(award) ? "\(award.name)" : "Locked")
    }
    
    private func generateAlert(for dataController: DataController) -> Alert {
        if dataController.hasEarnedAward(selectedAward!) {
            return Alert(
                title: Text(selectedAward!.name),
...
